Closes Bugfix: line break in binary metrics #96

--- a/app/src/pages/BinaryMetricsPage/BinaryMetricsPageStyles.css
+++ b/app/src/pages/BinaryMetricsPage/BinaryMetricsPageStyles.css
@@ -1,5 +1,8 @@
 .metric-number {
   font-size: 2.5em;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .metric-name {
